export interface AppNotification {
  id: string
  type: 'CARTE_CREEE' | 'MESSAGE_RECU' | 'ANNIVERSAIRE' | 'DOCUMENT_RECU' | 'RDV_RAPPEL' | string
  title: string
  body: string | null
  data: string | null
  read: boolean
  createdAt: string
}

export interface ApiResponse<T> {
  success: boolean
  data: T | null
  message: string | null
}

export interface MedecinProfile {
  id: string
  firstName: string
  lastName: string
  specialite: string
  ville: string
  adresse: string
  inpe: string
  latitude?: number | null
  longitude?: number | null
  photoUrl?: string | null
  secteurTarifaire?: 1 | 2 | 3
  langues?: string[]
  presentation?: string
  acceptNouveauxPatients?: boolean
  consultationVideo?: boolean
}

export interface MedecinNearbyResult {
  medecin: MedecinProfile
  distanceKm: number
}

export interface PatientRegistrationPayload {
  firstName: string
  lastName: string
  email: string
  phone: string
  password: string
  lang?: string
}

export interface PatientRegisteredResponse {
  id: string
  email: string
  firstName: string
  lastName: string
}

export interface MedecinRegistrationPayload {
  firstName: string
  lastName: string
  email: string
  phone: string
  password: string
  inpe: string
  specialite: string
  ville: string
  adresse?: string
  lang?: string
}

export interface MedecinRegisteredResponse {
  id: string
  email: string
  firstName: string
  lastName: string
  inpe: string
}

export interface VerifyEmailPayload {
  userId: string
  code: string
}

// ── Agenda ──────────────────────────────────────────────────────────────────

export interface Creneau {
  debut: string   // "HH:mm"
  fin: string     // "HH:mm"
  disponible: boolean
}

export type FrequenceDisponibilite = 'UNE_SEULE_FOIS' | 'TOUTES_LES_SEMAINES' | 'PERSONNALISE'
export type TypeFinRecurrence = 'JAMAIS' | 'DATE'

export interface Disponibilite {
  id: string
  medecinId: string
  jourSemaine: string   // "LUNDI" | "MARDI" | …
  heureDebut: string
  heureFin: string
  dureeConsultation: number
  frequence: FrequenceDisponibilite
  intervalSemaines: number
  dateDebut: string     // "YYYY-MM-DD"
  typeFinRecurrence: TypeFinRecurrence
  dateFin: string | null
}

export type StatutRdv = 'EN_ATTENTE' | 'CONFIRME' | 'ANNULE' | 'TERMINE'

/** Document (médical ou administratif) demandé au patient en amont d'un RDV. */
export interface DocumentRequis {
  id: string
  rdvId: string
  libelle: string
  fourni: boolean
  createdAt: string
}

export type TypeConsultation = 'CONSULTATION' | 'URGENCE'

export interface QuestionnairePreConsult {
  typeConsultation: TypeConsultation
  message: string
}

// ── Carte Virtuelle ─────────────────────────────────────────────────────────

export interface MedicamentActuel {
  nom: string
  dosage: string
}

export interface AntecedentChirurgical {
  description: string
  date?: string
}

export interface ContactUrgence {
  nom: string
  lien: string
  telephone: string
}

export interface CarteVirtuelle {
  id: string
  patientId: string
  cardRef: string
  statut: 'VIRTUEL'
  firstName: string | null
  lastName: string | null
  groupeSanguin: string | null
  tailleCm: number | null
  poidsKg: number | null
  donneurOrganes: boolean
  allergies: string[]
  maladiesChroniques: string[]
  medicamentsActuels: MedicamentActuel[]
  antecedentsChirurgicaux: AntecedentChirurgical[]
  vaccinations: string[]
  antecedentsFamiliaux: string[]
  contactsUrgence: ContactUrgence[]
  medecinTraitant: string | null
  assuranceNom: string | null
  assuranceNumero: string | null
  assuranceDetails: string | null
  createdAt: string
  updatedAt: string
}

export interface CarteVirtuelleRequest {
  groupeSanguin?: string | null
  tailleCm?: number | null
  poidsKg?: number | null
  donneurOrganes?: boolean
  allergies?: string[]
  maladiesChroniques?: string[]
  medicamentsActuels?: MedicamentActuel[]
  antecedentsChirurgicaux?: AntecedentChirurgical[]
  vaccinations?: string[]
  antecedentsFamiliaux?: string[]
  contactsUrgence?: ContactUrgence[]
  medecinTraitant?: string | null
  assuranceNom?: string | null
  assuranceNumero?: string | null
  assuranceDetails?: string | null
}

// ── Patient profile (identity / contact) ─────────────────────────────────────

export interface PatientProfile {
  userId: string
  firstName: string
  lastName: string
  dateNaissance: string | null
  genre: string | null
  nationalite: string | null
  numIdentite: string | null
  photoUrl: string | null
  telephone: string | null
  adresseRue: string | null
  adresseVille: string | null
  adressePays: string | null
  createdAt: string
  updatedAt: string
}

export interface PatientProfileRequest {
  dateNaissance?: string | null
  genre?: string | null
  nationalite?: string | null
  numIdentite?: string | null
  photoUrl?: string | null
  telephone?: string | null
  adresseRue?: string | null
  adresseVille?: string | null
  adressePays?: string | null
}

// ── Messaging ────────────────────────────────────────────────────────────────

export interface Message {
  id: string
  conversationId: string
  senderId: string
  content: string
  sentAt: string
  readAt: string | null
}

export interface Conversation {
  id: string
  medecinId: string
  patientId: string
  medecinName: string
  patientName: string
  lastMessageAt: string | null
  createdAt: string
  unreadCount: number
  lastMessage: Message | null
}

// ── Booking ──────────────────────────────────────────────────────────────────

export interface BookingSlot {
  medecin: MedecinProfile
  date: string   // "YYYY-MM-DD"
  debut: string  // "HH:mm"
  fin: string    // "HH:mm"
}

// ── Patients ─────────────────────────────────────────────────────────────────

export interface PatientSummary {
  patientId: string
  firstName: string
  lastName: string
  dernierRdvDate: string   // "YYYY-MM-DD"
  dernierRdvStatut: StatutRdv
  hasFutureRdv: boolean
}

export interface PatientSummaryPage {
  content: PatientSummary[]
  total: number
  page: number
  size: number
}

export interface RendezVous {
  id: string
  medecinId: string
  patientId: string
  patientPrenom?: string | null
  patientNom?: string | null
  dateRdv: string    // "YYYY-MM-DD"
  heureRdv: string   // "HH:mm"
  duree: number
  statut: StatutRdv
  motif: string | null
  questionnaire?: QuestionnairePreConsult | null
  createdAt: string
}
